# labrat

./: .gitignore  Cargo.toml  README.md
examples/: usage.rs
slurm-utils-macro/: Cargo.toml
slurm-utils-macro/src/: lib.rs
src/: experiment.rs  hash.rs  lib.rs
