[package]
authors = ["Me <Me>"]
edition = "2018"
name = "slurm-harray"
version = "0.1.0"

[dependencies]
anyhow = "^1.0.38"
base-62 = "0.1.1"
clap = "^2.33.3"
json = "*"
serde = { version="^1.0.124", features = ["derive"] }
serde_json = { version = "^1.0.64", features = ["preserve_order"] }
sha2 = "^0.9.3"
siphasher = "^0.3.3"
slurm-utils-macro = { path = "./slurm-utils-macro" }
