[package]
authors = ["Me <Me>"]
edition = "2021"
name = "slurm-harray"
version = "0.1.0"

[dependencies]
anyhow = "^1.0"
base-62 = "^0.1"
serde = { version="^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
sha2 = "^0.9"
clap = { version ="^3.1", features = ["derive", "color"] }
