[package]
authors = ["Me <Me>"]
edition = "2021"
name = "labrat"
description = "A small framework for experimental setup."
version = "1.3.0"

[dependencies]
anyhow = "^1.0"
base-62 = "^0.1"
serde = { version="^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["preserve_order"] }
sha2 = "^0.9"
clap = { version ="^3.1", features = ["derive", "color"] }
